[tool.poetry]
name = "fakechain"
version = "0.1.0"
description = "Spiritual Sucessor to LangChain, limited scope"
authors = ["Eric Trautsch <eric-trautsch@uiowa.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
